--- a/packages/website/components/Logo.module.scss
+++ b/packages/website/components/Logo.module.scss
@@ -1,26 +1,30 @@
-.gittrends-logo {
+.logo {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 95px;
 
+  img {
+    height: 4em;
+  }
+
   span {
-    font-size: 2em;
+    font-size: 1.75em;
     color: white;
     font-weight: bolder;
   }
 }
 
 @media (max-width: 575.98px) {
-  .gittrends-logo {
+  .logo {
     display: flex;
     flex-direction: row;
     align-items: center;
     margin: auto;
 
     img {
-      height: 3em;
-      margin-right: 10px;
+      height: 2.5em;
+      margin-right: 0.5em;
     }
   }
 }
