--- a/packages/website/components/MadeWithLove.module.scss
+++ b/packages/website/components/MadeWithLove.module.scss
@@ -1,4 +1,4 @@
-.gittrends-love {
+.love {
   width: 100%;
   height: 20px;
   line-height: 14px;
@@ -7,7 +7,7 @@
 
   & > span {
     .heart {
-      color: @primary-color;
+      color: var(--primary-color);
       margin: 0 5px;
     }
 
