--- a/packages/website/components/NavigationBar.module.scss
+++ b/packages/website/components/NavigationBar.module.scss
@@ -1,9 +1,9 @@
-.gittrends-navigation-bar {
+.navigation-bar {
   display: flex;
   flex-direction: column;
   height: 100vh;
   min-width: 100%;
-  background-color: @primary-color;
+  background-color: var(--primary-color);
   box-shadow: 2px 0 2px 0 #888888;
 
   header {
@@ -19,27 +19,29 @@
   section.menu {
     flex-grow: 1;
 
-    .item:last-child {
-      border-bottom: 1px solid white;
-    }
-
     .item {
       display: block;
       color: white;
-      font-size: 1.35em;
+      font-size: 1.25em;
       padding: 0.75em 0;
       padding-left: 10px;
       border-top: 1px solid white;
       cursor: pointer;
     }
 
+    .item:last-child {
+      border-bottom: 1px solid white;
+    }
+
     .search-area {
       padding: 0.75em 10px;
+      color: var(--text-color);
     }
 
     .item.active {
       background-color: white;
-      color: @primary-color;
+      color: var(--primary-color);
+      font-weight: bold;
     }
   }
 
@@ -49,7 +51,7 @@
     justify-content: center;
     color: white;
     font-weight: bolder;
-    font-size: 1.5em;
+    font-size: 1.25em;
     padding: 5px 0;
 
     .icon {
@@ -60,7 +62,7 @@
 }
 
 @media (max-width: 575.98px) {
-  .gittrends-navigation-bar {
+  .navigation-bar {
     position: relative;
     height: 65px;
     font-size: 1.05em;
@@ -100,10 +102,10 @@
         display: none;
       }
 
-      &.visible {
+      &.mobile-menu {
         width: 100vw;
         height: 100vh;
-        background-color: @primary-color;
+        background-color: var(--primary-color);
         color: white;
         z-index: 2;
         opacity: 0.95;
