--- a/packages/website/pages/index.module.scss
+++ b/packages/website/pages/index.module.scss
@@ -1,24 +1,23 @@
-@import '../styles/less/antd-custom.less';
-
-.github-index-page {
+.index-page {
   width: 100%;
 
   & > header {
     padding: 5vh 0;
     text-align: center;
-    font-size: 3.25em;
-    color: @primary-color;
+    font-size: 3em;
+    color: var(--primary-color);
     font-weight: bolder;
   }
 
   & > section {
     text-align: center;
-    font-size: 1.25em;
 
     & > span {
       display: block;
-      margin: 25px;
+      margin: 40px 0;
       font-weight: bolder;
+      font-size: 1.1em;
+      color: var(--text-color-secondary);
     }
 
     .search-box {
@@ -34,28 +33,27 @@
       gap: 10px;
       width: 90%;
       margin: auto;
-      padding: 50px;
     }
 
     .db-statistics {
       width: 90%;
       margin: auto;
-      padding: 50px;
+      padding: 3em;
       display: flex;
       flex-direction: row;
       justify-content: space-evenly;
 
       .db-stats {
-        .ant-statistic-title {
-          font-size: 1.25em;
-        }
+        .db-stats-number {
+          display: flex;
+          align-items: center;
+          justify-content: center;
 
-        .ant-statistic-content-value {
-          color: @text-color;
-        }
-
-        .ant-statistic-content-prefix {
-          color: @primary-color;
+          .db-stats-icon {
+            color: var(--primary-color);
+            padding-right: 5px;
+            font-size: 1.25em;
+          }
         }
       }
     }
@@ -63,19 +61,19 @@
 }
 
 @media (max-width: 575.98px) {
-  .github-index-page {
+  .index-page {
     & > header {
       width: 95vw;
-      margin: 3vh auto;
+      margin: 4vh auto;
       padding: 0px;
-      font-size: 2.75em;
+      font-size: 2em;
     }
 
     & > section {
-      font-size: 1.15em;
+      font-size: 1em;
 
       & > span {
-        margin: 15px;
+        margin: 25px 0;
       }
 
       .search-box {
@@ -83,31 +81,28 @@
       }
 
       .project-samples {
-        grid-template-columns: repeat(2, 175px);
+        grid-template-columns: repeat(2, auto);
         grid-template-rows: auto;
         justify-content: center;
-        gap: 5px;
+        column-gap: 5px;
+        row-gap: 20px;
         width: 95%;
         padding: 0px;
       }
 
       .db-statistics {
-        padding: 25px;
+        font-size: 0.9em;
         display: grid;
         grid-template-columns: repeat(4, auto);
         grid-template-rows: auto;
+        padding-bottom: 1em;
 
-        .db-stats {
-          .ant-statistic-title {
-            display: none;
-          }
+        .db-stats .db-stats-number {
+          font-size: 1.5em;
+          margin-right: 15px;
 
-          .ant-statistic-content-value {
-            font-size: 0.75em;
-          }
-
-          .ant-statistic-content-prefix {
-            font-size: 0.75em;
+          .db-stats-icon {
+            font-size: 1.15em;
           }
         }
       }
